# rust-cli-example

./: .gitignore  LICENSE  README.md
rustCli/: Cargo.toml
rustCli/src/: app.rs  config.rs  macros.rs  main.rs
rustCli/src/commands/: cli.rs  cloudcmd.rs  example.rs  mod.rs
rustCli/src/commands/config/: cli.rs  find.rs  mod.rs
rustCli/src/commands/config/create/: cli.rs
rustCli/src/commands/config/set/: cli.rs  mod.rs  repo.rs
rustCli/src/modules/configuration/: mod.rs
