[package]
name = "rustCli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2.36"
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.71"
config-file = "0.2.3"
config = "0.14.1"
clap-verbosity-flag = "2.2.2"
log = "0.4.22"
once_cell = "1.20.2"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
confy = "0.6.1"
dunce = "1.0.5"
homedir = "0.3.4"
